[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv-env"
version = "0.1.0"
description = "Email triage OpenEnv environment"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entrypoint = "server.app:main"